manifest/kubetemp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conversao-temperatura-ingress
  namespace: conversao-temperatura
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kubetemp.pum
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conversao-temperatura-service
                port:
                  number: 80
